crates/tui/src/snapshots/lazybox_tui__theme__tests__swatch_Catppuccin_Mocha.snap
---
source: crates/tui/src/theme.rs
expression: render_swatch(theme)
---
accent       ████ fg=Rgb(137, 220, 235)
hover        ████ fg=Rgb(245, 194, 231)
success      ████ fg=Rgb(166, 227, 161)
warn         ████ fg=Rgb(249, 226, 175)
error        ████ fg=Rgb(243, 139, 168)
text_strong  ████ fg=Rgb(205, 214, 244)
text_dim     ████ fg=Rgb(147, 153, 178)
chrome       ████ fg=Rgb(69, 71, 90)
fill         ████ fg=Rgb(49, 50, 68)
surface      ████ fg=Rgb(30, 30, 46)
